tests/fixtures/invalid/pow_dict_bool_set.py
# Cannot call pow() with Dict[str, int], Bool, Set[int]
x = pow({"a": 1}, True, {1, 2, 3})
